Fix for bug 127368 (Can't type in textfields in pages with an iframe and body with marginheight and marginwidth=0)

Modified HandleEvent() to prevent forwarding KeyEvents to views with a different ViewManager.

r=roc+moz@cs.cmu.edu  sr=sfraser@netscape.com  a=shaver@mozilla.org